--- a/css/style_index.css
+++ b/css/style_index.css
@@ -2,23 +2,17 @@
 /* 整體設定 開始                               */
 /* =========================================== */
 body {
-	background-image: url("../image/background.jpg");
+	background-image: url("../image/index_background.png");
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
+	background-size: cover;
 	margin:  0px;
 	padding: 0px;
-	text-align:  center;
-	line-height: 150%;
-}
-
-.title {
-	color: #0000FF;
-	font-family: Microsoft JhengHei;
-	font-size:   55px;
-	font-weight: bold;
-	text-shadow: 3px 3px 13px #FF37FD;
 }
 
 .imgBtn {
-	width:  15%;
-	height: 15%;
+	width:  10%;
+	height: 10%;
 	cursor: pointer;  /* 改變滑鼠游標的形狀 */
 }
